<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="btg_global_cancel">Cancel</string>
    <string name="btg_global_confirm">OK</string>
    <string name="btg_global_error">Error! Try Again!</string>
    <string name="btg_global_got_it">Got it!</string>
    <string name="btg_guide_sub_0">Report Bug via tag</string>
    <string name="btg_guide_sub_1">Tap screen to add a tag</string>
    <string name="btg_guide_sub_2">Tap tag to flip</string>
    <string name="btg_guide_sub_3">Long press tag to edit or delete</string>
    <string name="btg_login_captcha">Captcha</string>
    <string name="btg_login_captcha_needed">Captcha needed!</string>
    <string name="btg_login_do">Sign in</string>
    <string name="btg_login_failed">Sign in failed!</string>
    <string name="btg_login_password">Password</string>
    <string name="btg_login_password_empty">Password should not be empty!</string>
    <string name="btg_login_progress">Sign in​</string>
    <string name="btg_login_succeed">Sign in succeed!</string>
    <string name="btg_login_username">Account</string>
    <string name="btg_login_username_empty">Account should not be empty!</string>
    <string name="btg_logout_confirm">Sure to sign out?</string>
    <string name="btg_logout_do">Sign out</string>
    <string name="btg_logout_my_issue">My issues</string>
    <string name="btg_logout_title">Options</string>
    <string name="btg_quick_signin_del">Sure to delete?</string>
    <string name="btg_quick_signin_desc">Click account below to sign in directly</string>
    <string name="btg_quick_signin_title">Quick Sign In</string>
    <string name="btg_report_discard_alert">Sure to discard?</string>
    <string name="btg_report_start">Start Describe</string>
    <string name="btg_report_tag_bug">Bug</string>
    <string name="btg_report_tag_hint">issue description</string>
    <string name="btg_report_tag_improve">Feature</string>
    <string name="btg_restart_log_title">Sure to restart trace?</string>
    <string name="btg_tag_menu_delete">Delete</string>
    <string name="btg_tag_menu_edit">Edit</string>
    <string name="btg_tag_menu_info">Tag info</string>
    <string name="btg_tag_num_max">Add three tags at most</string>
    <string name="btg_tag_num_min">Add one tag at least</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="tablayout_tab_vehicle">车辆</string>
    <string name="tablayout_tab_message">信息</string>
    <string name="tablayout_tab_user">用户</string>
    <string name="listview_loading">正在加载</string>
    <string name="nomore_loading">无更多数据</string>
    <string name="refresh_done">刷新完成</string>
    <string name="refreshing">正在刷新...</string>
    <string name="ABC_ACCOUNT_NUM">6228 4504 6004 8641 718</string>
    <string name="CBC_ACCOUNT_NUM">4340 6138 1123 1381</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="abnormal_stop_alarm">异常停车报警</string>
    <string name="about_me">关于我们</string>
    <string name="about_us">关于我们</string>
    <string name="accOpen">ACC开</string>
    <string name="acc_open_count">发动机开</string>
    <string name="action_settings">Settings</string>
    <string name="activate">激活</string>
    <string name="activating">正在激活...</string>
    <string name="agin_password_notice">确认新密码:</string>
    <string name="alarm_choice">请选择需要处理车辆</string>
    <string name="alarm_deal">处理中...</string>
    <string name="alarm_finish">完成</string>
    <string name="alarm_set_out_bit_late">发车晚点</string>
    <string name="all">全国</string>
    <string name="all_domain">ALL</string>
    <string name="all_domain_hint">如果设置该项，所有请求使用该地址</string>
    <string name="all_nationwide">全国</string>
    <string name="all_select">全选</string>
    <string name="alram_abnormal">紧急报警</string>
    <string name="alram_arrival_bit_late">到达晚点</string>
    <string name="alram_driving_limit">行车限制报警</string>
    <string name="alram_edit">选择</string>
    <string name="alram_fatigue_driving">疲劳驾驶</string>
    <string name="alram_overspeed">超速报警</string>
    <string name="alram_power_cut">掉电报警</string>
    <string name="alram_timeout_no_start">超时未发车</string>
    <string name="alram_title">消息中心</string>
    <string name="alternate_proxy_host_file_name">alternate_proxy_host_file.txt</string>
    <string name="apk_downloading">正在下载升级文件，请稍后</string>
    <string name="apk_plugin_version_name">3.2.0</string>
    <string name="app_environment">PRODUCTION</string>
    <string name="app_name">海格经纬车辆管理</string>
    <string name="app_store_key">5D1B82E7E3F54158ABE5B667816C9705</string>
    <string name="ask_for_more">更多</string>
    <string name="auth_fail_from_server">很抱歉，认证失败。%1$s。请修改后重新提交申请认证。</string>
    <string name="authenticate_user">认证身份</string>
    <string name="authenticate_waiting">认证资料已经提交，我们将在24小时之内完成审核，请耐心等待</string>
    <string name="authentication_failed">审核失败</string>
    <string name="authentication_ing">审核中...</string>
    <string name="authentication_success">审核成功</string>
    <string name="auto_center">汽配直购中心</string>
    <string name="average_fuel_consumption">平均油耗</string>
    <string name="average_velocity">平均速度</string>
    <string name="avoid_congestion">避免拥堵</string>
    <string name="back">返回</string>
    <string name="backAlter">修改</string>
    <string name="backAlter1">返回修改</string>
    <string name="begin_time">起始时间</string>
    <string name="being_processed">正在处理</string>
    <string name="bg_status_bar" />
    <string name="birthday">出生日期:</string>
    <string name="broker_intro_prefix">经营范围：</string>
    <string name="broker_lp_prefix">物流园区：</string>
    <string name="browse">浏览</string>
    <string name="browse_continue">继续浏览</string>
    <string name="bugly_appid">2e5331c73e</string>
    <string name="cal">电话联系</string>
    <string name="calendar">Calendar</string>
    <string name="call">呼叫</string>
    <string name="can_not_find_picture">未获取到图片，请重试!</string>
    <string name="can_not_load">无法加载图片</string>
    <string name="cancel">取消</string>
    <string name="car_count">车辆总数</string>
    <string name="car_detail">车辆详情</string>
    <string name="car_stop_status">停车</string>
    <string name="change_pwd_again_pwd">确认新密码</string>
    <string name="change_pwd_new_pwd">新密码</string>
    <string name="change_pwd_new_pwd_hint">请输入新密码</string>
    <string name="change_pwd_ok">确定</string>
    <string name="change_pwd_old_new_sure">密码不一致</string>
    <string name="change_pwd_old_pwd">当前密码</string>
    <string name="change_pwd_old_pwd_hint">请输入当前密码</string>
    <string name="change_pwd_title">修改密码</string>
    <string name="checkIdTip">对于曾经验证过的姓名、身份证号组合，系统会自动进行判断，不会重复计费，请放心使用。</string>
    <string name="checkIdcard">立即验证</string>
    <string name="check_for_updates">检查新版本</string>
    <string name="check_number_correct">请检查电话号码是否正确</string>
    <string name="check_phone_connect_network_or_working">检查手机是否已接入移动网络，并且手机没有停机。</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_failed">检查失败，请稍后再试</string>
    <string name="check_update_ing">检查中，请稍等...</string>
    <string name="check_upgrade">检查更新</string>
    <string name="check_wifi_device">检查手机中的wifi设备，查看是否有可接入的wifi信号。</string>
    <string name="checking_app_update">正在获取升级信息...</string>
    <string name="chinamobile_network_tip">你当前使用的是中国移动的GPRS上网时，首先提示使用本软件可能会比较慢，建议使用无线WIFI网络或4G网络.</string>
    <string name="choice_any">不限</string>
    <string name="click_to_search_message">点击搜索信息</string>
    <string name="close">关闭</string>
    <string name="com_hcb_plugin_customer_services">客服</string>
    <string name="com_hcb_plugin_store">商城</string>
    <string name="com_wlqq_gps_plugin">车辆管理</string>
    <string name="com_wlqq_plugin_enterprise_wallet">企业钱包</string>
    <string name="com_wlqq_plugin_etc">ETC</string>
    <string name="com_wlqq_plugin_freight">货源</string>
    <string name="cost_highway">高速通行费：</string>
    <string name="cost_highway_bill">高速费票据：</string>
    <string name="cost_park">停车费用：</string>
    <string name="cost_park_bill">停车票据：</string>
    <string name="cost_wash">洗车费用：</string>
    <string name="cost_wash_bill">洗车票据：</string>
    <string name="dialog_ok">确定</string>
    <string name="eng_km">公里</string>
    <string name="fuel_card_no">油料卡号：</string>
    <string name="fuel_consumption_per_100">百公里油耗：</string>
    <string name="fuel_distance">加油里程：</string>
    <string name="fuel_liter">加  油  量：</string>
    <string name="fuel_price">单        价：</string>
    <string name="fuel_time">加油时间：</string>
    <string name="fuel_total_price">加油金额：</string>
    <string name="fuel_type">油料品种：</string>
    <string name="l">升</string>
    <string name="l_rmb">元/升</string>
    <string name="logbook_label_cost_record">费用记录：</string>
    <string name="logbook_label_drive_distance">行驶里程：</string>
    <string name="logbook_label_driver_job_no">司机工号：</string>
    <string name="logbook_label_driver_name">司机姓名：</string>
    <string name="logbook_label_fuel_record">油耗记录：</string>
    <string name="logbook_label_in_record">收车记录：</string>
    <string name="logbook_label_out_record">发车记录：</string>
    <string name="logbook_label_plate_no">车  牌  号：</string>
    <string name="logbook_label_vehicle_brand">车辆品牌：</string>
    <string name="logbook_plz_check">请选择</string>
    <string name="logbook_plz_fill">请填写</string>
    <string name="logbook_unfilled">未填写</string>
    <string name="modify">修改</string>
    <string name="note_hint">注意：新填写的域名或IP如果是非空字符则认为会替换原来的域名，如果是空字符则表示不替换。</string>
    <string name="out_address">发车地点：</string>
    <string name="out_distance">发车里程：</string>
    <string name="out_time">发车时间：</string>
    <string name="pieces">张</string>
    <string name="rmb">元</string>
    <string name="save">保存</string>
    <string name="tip_after">项为必填项</string>
    <string name="tip_before">带</string>
    <string name="tip_star">*</string>
    <string name="unsearched_vehicle_data">未查询到车辆数据</string>
</resources>