<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/activity_domain_set" android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/domain_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
    <TextView android:textColor="@color/text_grey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/note_hint" />
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/view_default_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cancel_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/modify_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/modify" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>